Cambios de mi parte

--- a/index.html
+++ b/index.html
@@ -38,5 +38,59 @@
             </ul>
         </nav>
     </header>
+
+
+    <main class="hero">
+        <div class="hero__text">
+            <h2>Nuestros Trabajos ONGs</h2>
+        </div>
+        <div class="hero__services">
+            <div class="service">
+                <img src="src/imagenes/image1.png" alt="Imagen1" loading="lazy"></div>
+            <div class="service">
+                <img src="src/imagenes/image2.png" alt="Imagen2" loading="lazy"></div>
+            <div class="service">
+                <img src="src/imagenes/image3.png" alt="Imagen3" loading="lazy"></div>
+            <div class="service">
+                <img src="src/imagenes/image4.png" alt="Imagen4" loading="lazy"></div>
+            <div class="service">
+                <img src="src/imagenes/image5.png" alt="Imagen5" loading="lazy"></div>
+            <div class="service">
+                <img src="src/imagenes/image6.png" alt="Imagen6" loading="lazy"></div>
+            </div>
+        </div>
+    </main>
+    <main class="alimentacion">
+        <div class="alimentacion__title">
+            <h2>Alimentacion</h2>
+        </div>
+    </main>
+    <header class="container">
+        <div class="alimentacion__info">
+            <div class="alimentacion__img">
+                <img src="src/imagenes/imageAlimentacion.png" alt="Banco de alimentos de Quito" loading="lazy"></div>
+            <div class="bancoAlimentos__container">
+                <h2 class="alimentacion__subtitle">BANCO DE ALIMENTOS QUITO</h2>
+                <p class="alimentacion__text">Se dedica a rescatar alimentos que serían descartados, los clasifica y los distribuye a personas vulnerables a través de redes de comedores, comunidades, etc.</p>
+                <h2 class="alimentacion__ofrecen">Ofrecen:</h2>
+                <p class="alimentacion__text2">- Entrega de alimentos a personas y familias que lo necesitan.</p>
+                <p class="alimentacion__text2">- Apoyo comunitario mediante voluntariado.</p>
+            </div>
+        </div>
+    </header>
+    <header class="container">
+        <div class="alimentacion__info">
+            <div class="alimentacion__img">
+                <img src="src/imagenes/imageCaritasInternacional.png" alt="Caritas Internacional" loading="lazy"></div>
+            <div class="caritasInternacional__container">
+                <h2 class="alimentacion__subtitle">CARITAS INTERNACIONAL</h2>
+                <p class="alimentacion__text">Es la organización oficial de la Iglesia Católica en Ecuador encargada de gestionar y organizar la obra social, promoviendo la solidaridad y el desarrollo integral de las comunidades más vulnerables.</p>
+                <h2 class="alimentacion__vision">Visión:</h2>
+                <p class="alimentacion__text2">-“Un mundo en el que la dignidad de toda persona y la justicia social se respeten plenamente, y donde todas las comunidades puedan vivir con paz, equidad y solidaridad.”</p>
+                <p class="alimentacion__text2">- Apoyo comunitario mediante voluntariado.</p>
+            </div>
+        </div>
+    </header>
+
 </body>
 </html>
